--- a/sass/global/font.scss
+++ b/sass/global/font.scss
@@ -7,7 +7,7 @@
 @font face {
   font-family: 'Roboto';
   src: url('../fonts/robotomedium.woff2');
-  font-weight: medium;
+  font-weight: 500;
   font-style: normal;
 }
 @font face {
