--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,21 @@
 @import "global/normalize.scss";
 @import "global/font.scss";
 @import "blocks/scafolding.scss";
+@import "blocks/main-header.scss";
+@import "blocks/menu.scss";
+@import "blocks/modal.scss";
+@import "blocks/user-nav.scss";
+@import "blocks/reference-information.scss";
+@import "blocks/special-offers.scss";
+@import "blocks/bestseller.scss";
+@import "blocks/ice-cream.scss";
+@import "blocks/features.scss";
+@import "blocks/advert-info.scss";
+@import "blocks/advertisement";
+@import "blocks/subscribe.scss";
+@import "blocks/button.scss";
+@import "blocks/contacts.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/info.scss";
+@import "blocks/copyright.scss";
